<?xml version="1.0"?>
<package format="2">
  <name>rabbitamr_description</name>
  <version>0.1.0</version>
  <description>The rabbitamr_description package</description>

  <maintainer email="shen.i@live.com">Sheni Hamitaj</maintainer>
  <author email="shen.i@live.com">Sheni Hamitaj</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <license>Unlicense</license>
  <export>

  </export>
</package>
