<?xml version="1.0"?>
<package format="2">
  <name>rabbitamr_msgs</name>
  <version>0.1.0</version>
  <description>The rabbitamr_msgs package</description>

  <maintainer email="shen.i@live.com">Sheni Hamitaj</maintainer>
  <author email="shen.i@live.com">Sheni Hamitaj</author>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
